# IZ2

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  prog
src/: main.cpp  static_lib.cpp
test/: test.cpp
test_text/: letters_1.txt  letters_10000.txt  letters_3.txt
testy/: interface.h  struct.h
